    from "munin-node" (removed by upstream)
  * improve README.PluginConfiguration (for "munin-node")
  * increase compatibility level from 10 to 11
  * munin-plugins-extra: remove outdated alternate dependency on
    "ruby-interpreter" (thanks piuparts)
  * copyright: remove outdated reference to previously embedded fonts

 -- Lars Kruse <devel@sumpfralle.de>  Thu, 21 Jun 2018 22:05:46 +0200

munin (2.0.37-2) unstable; urgency=medium

  * d/control:
    - switch packaging to salsa.debian.org. Thanks to the alioth admins for
      providing such a nice service so long!
    - bump Standards-Version to 4.1.4, no changes needed.

 -- Holger Levsen <holger@debian.org>  Wed, 30 May 2018 23:41:48 +0000

munin (2.0.37-1) unstable; urgency=medium

  * New upstream version 2.0.37.
  * New upstream version 2.0.36, Closes: #894017.
  * New upstream version 2.0.35, fixing various issues, including bugs in:
    - plugin http_loadtime: Closes: #798258, #862794, #886517
    - plugin netstat: Closes: #861851
    - plugin nfsd4: Closes: #833740
    - plugin psu_: Closes: #860487
  * Build-Depends-Indep: switch from default-jdk to openjdk-8-jdk as munin
    fails to build with java 9. Closes: #873993
  * debian/Makefile.config: define JC without path containing default-java.
  * munin-plugis-core:
    - add suggests to time. Closes: #862794
    - add suggests to bc. Closes: #886516
  * Switch maintainer address to team+munin@tracker.debian.org.
  * debian/changelog: drop trailing whitespaces, thanks lintian. 

 -- Holger Levsen <holger@debian.org>  Thu, 29 Mar 2018 15:26:26 +0000

munin (2.0.34-3) unstable; urgency=medium

  * debian/munin-node.triggers: use an explicit interest-await trigger for
    perl-major-upgrades.
  * debian/control:
    - use https:// URL for Vcs-Git: header.
    - specify -b debian for Vcs-Git:.

 -- Holger Levsen <holger@debian.org>  Mon, 08 Jan 2018 11:19:25 +0000

munin (2.0.34-2) unstable; urgency=medium
