@@ -37,6 +37,9 @@ munin (2.0.37-3) UNRELEASED; urgency=low
   * munin-plugins-extra: remove outdated alternate dependency on
     "ruby-interpreter" (thanks piuparts)
   * copyright: remove outdated reference to previously embedded fonts
+  * autopkgtest: update embedded "sharness" from 0.3 to 1.0
+    (Thanks to Christian Göttsche:
+     https://github.com/munin-monitoring/munin/issues/844)
 
  -- Lars Kruse <devel@sumpfralle.de>  Thu, 21 Jun 2018 22:05:46 +0200
 
